--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "release:preview": "node ./node_modules/@silvermine/standardization/scripts/release.js preview",
     "release:prep-changelog": "node ./node_modules/@silvermine/standardization/scripts/release.js prep-changelog",
     "release:finalize": "node ./node_modules/@silvermine/standardization/scripts/release.js finalize",
-    "prepublish": "grunt build"
+    "prepare": "grunt build"
   },
   "author": "Jeremy Thomerson",
   "license": "MIT",
